<resources>
    <string name="app_name">School App</string>
    <string name="username">Username</string>
    <string name="gender">Gender</string>
    <string name="firstname">Firstname</string>
    <string name="password">Password</string>
    <string name="lastname">Lastname</string>
    <string name="middlename">Middlename</string>
    <string name="birthdate">Birthdate</string>
    <string name="dprog">Degree Program</string>
    <string name="role">Role</string>
    <string name="regNo">Reg. No.:</string>
    <string name="email">Email</string>
    <string name="ward">Ward</string>
    <string name="phone">Phone</string>
    <string name="region">Region</string>
    <string name="district">District</string>
    <string name="male">Male</string>
    <string name="registration">Registration</string>
    <string name="admin_header">Admin Home</string>
    <string name="admin_name">Admin</string>
    <string name="admin_details">Welcome to School App \n\n You can : \n
        - \tAdd Admin
        - \tAdd Students \n
        - \tAdd Lectures \n
        - \tAdd Courses \n
        - \tView Registered Students and Lectures\n\n
        Navigate through the left menu to perform any operation.</string>
    <string name="student_details"><u>Student Initial Details</u></string>
    <string name="student_other_details"><u>Other Details</u></string>
    <string name="lecturer_details"><u>Lecturer Initial Details</u></string>
    <string name="lecturer_other_details"><u>Other Details</u></string>
    <string name="female">Female</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="login_notify">Please Login to continue</string>

    <string-array name="role">
        <item>Admin</item>
        <item>Teacher</item>
        <item>Student</item>
    </string-array>

    <string-array name="location">
        <item>Region</item>
        <item>District</item>
        <item>ward</item>
    </string-array>

    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_register">Register</string>
    <string name="menu_view_student">Students</string>
    <string name="menu_view_lecturer">Lecturers</string>
    <string name="menu_courses">Courses</string>
    <string name="update">Update</string>
    <string name="menu_reg_course">Register Course</string>
    <string name="course_name">Course Name</string>
    <string name="cancel_button">Cancel</string>
    <string name="create_button">Create</string>
    <string name="course_code">Course Code: %1$s</string>
    <string name="course_credit">Course Credit: %1$s</string>

    <string name="register_course">Registered Courses</string>


</resources>
