<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/navyblue">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:paddingBottom="10dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/admin_header"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:paddingBottom="10dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/admin_name"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:paddingBottom="10dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/admin_details"
        android:textColor="@color/white"
        android:textSize="17sp" />




</LinearLayout>