<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#7A791CFF"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="97dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="50sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/login_layout"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/login_notify"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="17dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="monospace"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:background="@drawable/input_bg"
                android:hint="@string/username"
                android:inputType="text"
                android:textColorHint="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="17dp"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="20dp"
            android:layout_marginRight="17dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:layout_height="match_parent"
                android:fontFamily="monospace"
                android:background="@drawable/input_bg"
                android:textAlignment="textStart"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="12dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/login_btn_bg"
            android:fontFamily="sans-serif"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp" />


    </LinearLayout>
</RelativeLayout>