<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/register_form"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/navyblue"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:paddingBottom="10dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/registration"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="7dp"
                android:layout_marginBottom="1dp"
                android:background="@drawable/layout_bg"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/firstname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:hint="@string/firstname"
                        android:inputType="text"
                        android:paddingStart="8dp"
                        android:paddingEnd="2dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/middlename"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:hint="@string/middlename"
                        android:inputType="text"
                        android:paddingStart="8dp"
                        android:paddingEnd="2dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:hint="@string/lastname"
                        android:inputType="text"
                        android:paddingStart="8dp"
                        android:paddingEnd="2dp" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="7dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="7dp"
                android:layout_marginBottom="1dp"
                android:background="@drawable/layout_bg"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="start"
                    android:text="@string/gender"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/radio_bg"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">

                    <RadioGroup
                        android:id="@+id/gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:background="@drawable/radio_bg"
                        android:paddingTop="3dp"
                        android:paddingBottom="3dp">
                        <RadioButton
                            android:id="@+id/radio_male"
                            android:layout_width="100dp"
                            android:textColor="@color/white"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-condensed"
                            android:text="@string/male" />

                        <RadioButton
                            android:id="@+id/radio_female"
                            android:textColor="@color/white"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-condensed"
                            android:text="@string/female" />
                    </RadioGroup>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="7dp"
                android:layout_marginBottom="1dp"
                android:background="@drawable/layout_bg"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:paddingStart="8dp"
                        android:paddingEnd="2dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:hint="@string/phone"
                        android:inputType="phone"
                        android:paddingStart="8dp"
                        android:paddingEnd="2dp" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <EditText
                android:id="@+id/birthdate"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginStart="7dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="7dp"
                android:fontFamily="sans-serif-condensed"
                android:layout_marginBottom="1dp"
                android:background="@drawable/layout_bg"
                android:hint="@string/birthdate"
                android:inputType="datetime"
                android:paddingStart="12dp"
                android:paddingEnd="2dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="7dp"
                android:layout_marginBottom="1dp"
                android:background="@drawable/layout_bg"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="121dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="0.5"
                        android:layout_marginBottom="2dp"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/role"
                        android:textSize="20sp" />

                    <Spinner
                        android:id="@+id/role"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:entries="@array/role"
                        android:prompt="@string/role"
                        android:spinnerMode="dropdown" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="7dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="1dp"
                        android:layout_marginEnd="2dp"
                        android:layout_weight="0.5"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/username"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:paddingTop="2dp"
                        android:paddingBottom="2dp"
                        android:layout_marginEnd="3dp"/>


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="7dp"
                android:layout_marginBottom="1dp"
                android:background="@drawable/layout_bg"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/degreeProgram"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:hint="@string/dprog"
                        android:inputType="text"
                        android:paddingStart="8dp"
                        android:paddingEnd="2dp" />

                </com.google.android.material.textfield.TextInputLayout>


                <Spinner
                    android:id="@+id/region"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginStart="10dp"
                    android:entries="@array/location"
                    android:prompt="@string/region"
                    android:spinnerMode="dropdown" />

                <Spinner
                    android:id="@+id/district"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginStart="10dp"
                    android:entries="@array/location"
                    android:prompt="@string/district"
                    android:spinnerMode="dropdown" />
                <Spinner
                    android:id="@+id/ward"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginStart="10dp"
                    android:entries="@array/location"
                    android:prompt="@string/ward"
                    android:spinnerMode="dropdown" />


            </LinearLayout>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="135dp"
                android:layout_marginTop="35dp"
                android:clickable="true"
                android:layout_marginEnd="135dp"
                android:background="@drawable/login_btn_bg"
                android:text="@string/register" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>
